Rigidbody constraint collision problem #47758

Closed
opened 2016-03-11 10:29:42 +01:00 by Martin Felke · 10 comments
Member

System Information
Linux Mint 17 64 bits, I7 2600, 16 GB RAM, Geforce GTX 580

Blender Version
Broken: 2.77 0bcbbb1
Worked: 2.76b

Short description of error
Rigidbodies do not collide even after their constraint is broken when "Disable Collisions" is active in Rigidbody Constraint Settings.
This setting is only supposed to suppress collisions between objects with intact constraints. Maybe there was a change / bug in recent bullet update (2.83 ?)
As workaround one could deactivate "Disable Collisions", but this leads to different simulation behavior.

Behavior in 2.76b:
bullet_constraint_collision_test_276.png

Behavior in 2.77:
bullet_constraint_collision_test_277.png

Exact steps for others to reproduce the error
Open attached blend and just press Alt A. Notice how in 2.76 the cubes do not penetrate each other while they do in 2.77 (which is wrong)
bullet_constraint_collision_test.blend

**System Information** Linux Mint 17 64 bits, I7 2600, 16 GB RAM, Geforce GTX 580 **Blender Version** Broken: 2.77 0bcbbb1 Worked: 2.76b **Short description of error** Rigidbodies do not collide even after their constraint is broken when "Disable Collisions" is active in Rigidbody Constraint Settings. This setting is only supposed to suppress collisions between objects with intact constraints. Maybe there was a change / bug in recent bullet update (2.83 ?) As workaround one could deactivate "Disable Collisions", but this leads to different simulation behavior. Behavior in 2.76b: ![bullet_constraint_collision_test_276.png](https://archive.blender.org/developer/F289456/bullet_constraint_collision_test_276.png) Behavior in 2.77: ![bullet_constraint_collision_test_277.png](https://archive.blender.org/developer/F289458/bullet_constraint_collision_test_277.png) **Exact steps for others to reproduce the error** Open attached blend and just press Alt A. Notice how in 2.76 the cubes do not penetrate each other while they do in 2.77 (which is wrong) [bullet_constraint_collision_test.blend](https://archive.blender.org/developer/F289455/bullet_constraint_collision_test.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @scorpion81

Added subscriber: @scorpion81
Author
Member

Added subscriber: @erwin

Added subscriber: @erwin
Author
Member

Also mentioned this at the bullet github issue tracker:

https://github.com/bulletphysics/bullet3/issues/582

Also mentioned this at the bullet github issue tracker: https://github.com/bulletphysics/bullet3/issues/582
Member

Added subscriber: @LukasTonne

Added subscriber: @LukasTonne

Added subscribers: @brecht, @Sergey

Added subscribers: @brecht, @Sergey

@brecht, guess this is caused by the Bullet update. Mind having a look here? :)

@brecht, guess this is caused by the Bullet update. Mind having a look here? :)
Brecht Van Lommel was assigned by Sergey Sharybin 2016-03-22 16:16:25 +01:00

This issue was referenced by e14324daa7

This issue was referenced by e14324daa72f21405b697d87c6d2d780873167b3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

It seems this is a bug in Bullet, introduced here. The previous code would check if the constraint is enabled before disabling collisions, the new code no longer does that as far as I can tell.
https://github.com/bulletphysics/bullet3/issues/165

Reverted that change with a custom patch for now, hopefully it will be fixed in Bullet in the future.

It seems this is a bug in Bullet, introduced here. The previous code would check if the constraint is enabled before disabling collisions, the new code no longer does that as far as I can tell. https://github.com/bulletphysics/bullet3/issues/165 Reverted that change with a custom patch for now, hopefully it will be fixed in Bullet in the future.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47758
No description provided.